# mortgage-service

./: .dockerignore  .gitignore  CMakeLists.txt  README.md
assets/: fonts.css  index-dev.html  index.html  reset.css
docker/: Dockerfile  compose.yml
src/: main.cc
web/: package.json  tsconfig.app.json  vite.config.ts
web/src/: details.tsx  input-data.tsx  layout.tsx  main.tsx  model.ts  table-data.tsx  table.css
web/src/components/ui/: accordion.tsx  button.tsx  input-group.tsx  menubar.tsx
